# ntlmscan

./: .gitignore  ntlmscan.py  pyproject.toml  setup.py
ntlmscan/: __init__.py  __main__.py
